--- a/_sources/td-fourier.ipynb
+++ b/_sources/td-fourier.ipynb
@@ -233,6 +233,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Exercice 13**\n",
+    "\n",
+    "La figure ci-dessous est tirée de la publication scientifique\n",
+    "> R. Reiz, C. Gordan, D. Purcaru & C. Kokkonis, « Using Advanced Signal Processing Methods for DTMF Detection »,\n",
+    "> Journal of Electrical and Electronics Engineering, 2009.\n",
+    "\n",
+    "```{figure} _static/figs/sftf.png\n",
+    "---\n",
+    "height: 300px\n",
+    "name: F:td-fourier:sftf\n",
+    "```\n",
+    "\n",
+    "* Que représente les axes (et oui, le titre de l'axe des ordonnées n'est pas clair :\n",
+    "  c'est une maladresse des auteurs...) ?\n",
+    "* Décrivez précisément (en français ou sous forme mathématique) quel est le signal analysé."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "% \\exo{}\n",
     "% \\begin{enumerate}\n",
     "%\n",
@@ -305,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
