--- a/_sources/temps-frequence.ipynb
+++ b/_sources/temps-frequence.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "remove-cell"
@@ -32,7 +32,7 @@
    "source": [
     "Les transformations de Fourier font ressortir le contenu fréquentiel\n",
     "mais elles ne permettent pas facilement de localiser temporellement certains évènements qui surviennent dans le signal,\n",
-    "comme des changements brusques ou des modification de fréquence.\n",
+    "comme des changements brusques ou des modifications de fréquence.\n",
     "\n",
     "La {numref}`F:temps-frequence:deux-sinus` représente deux signaux et leur spectres respectifs.\n",
     "Ces deux signaux ont en commun le fait qu'ils sont constitués de deux sinusoïdes de fréquence 50 Hz et 200 Hz,\n",
@@ -45,12 +45,14 @@
     ":name: \"F:temps-frequence:deux-sinus\"\n",
     "\n",
     "Spectres de deux signaux constitués de sinusoïdes de fréquence 50 Hz et 200 Hz.\n",
-    "```"
+    "```\n",
+    "\n",
+    "Pour répondre à la difficulté d'analyser les localisations temporelles des fréquences, d'autres outils ont été développés."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "remove-cell"
@@ -130,6 +132,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Transformée de Fourier à court terme\n",
+    "\n",
+    "La transformée de Fourier à court terme (STFT : _short-time Fourier transform_)\n",
+    "est une transformée de Fourier restreinte à une portion du signal délimitée par une fenêtre $w(t)$\n",
+    "qu'on fait glisser le long de l'axe temporel :\n",
+    "\n",
+    "$$\n",
+    "X(f,\\tau) = \\int_{-\\infty}^{+\\infty} x(t) w(t-\\tau) e^{-j2\\pi f t} dt\n",
+    "$$\n",
+    "\n",
+    "Il s'agit simplement de la formule de la transformée de Fourier dans laquelle a été introduite la fenêtre,\n",
+    "qui est positionnée en $\\tau$.\n",
+    "La transformée de Fourier à court terme est donc un signal à deux dimensions\n",
+    "qui dépend d'un temps $\\tau$ et d'une fréquence $f$, d'où le nom de « représentation temps-fréquence ».\n",
+    "L'objectif de cette transformée étant l'analyse dans le domaine temps-fréquence, et non la reconstruction du signal temporel, \n",
+    "la transformée inverse n'a pas d'utilité.\n",
+    "\n",
+    "Lorsqu'on représente une transformée de Fourier à court terme, on utilise uniquement son module,\n",
+    "et plus précisément le carré du module $|X(f,\\tau)|^2$ qui est appelé « spectrogramme » de $x(t)$.\n",
+    "Le spectrogramme fournit une indication sur la quantité d'énergie présente dans le signal\n",
+    "autour de la fréquence $f$ et de l'instant $\\tau$.\n",
+    "Les figures représentent les spectrogrammes de quelques signaux.\n",
+    "\n",
     "````{tabbed} Sinus à 50 et 200 Hz\n",
     "```{glue:figure} G:temps-frequence:sin50200\n",
     ":figwidth: 800px\n",
@@ -164,12 +189,51 @@
     "```{glue:figure} G:temps-frequence:duck\n",
     ":figwidth: 800px\n",
     "```\n",
-    "````"
+    "````\n",
+    "\n",
+    "```{margin}\n",
+    "Certains artistes s'amusent également avec cette transformée, comme Aphex Twin sur [_Formula_](https://youtu.be/M9xMuPWAZW8?t=305).\n",
+    "```\n",
+    "\n",
+    "La représentation en spectrogramme est également intéressante en musique.\n",
+    "Voyez par exemple le résultat sur\n",
+    "[_La Lettre à Élise_](https://www.youtube.com/watch?v=S2XkCfvGPXE) de Ludwig van Beethoven\n",
+    "ou la [_Symphonie du Nouveau Monde_](https://youtu.be/Txp-pHU2K6w?t=652) de Antonín Dvořák.\n",
+    "\n",
+    "En traitement du signal, une fenêtre est un signal de durée limitée.\n",
+    "Par conséquent, la majeure partie de l'énergie de la fenêtre $w(t)$ est contenue dans un intervalle temporel.\n",
+    "De même, l'énergie de la fenêtre est également contenue dans un intervalle fréquentiel.\n",
+    "Ces deux intervalles définissent une zone délimitée dans le plan temps-fréquence.\n",
+    "L'idéal serait d'avoir une zone très localisée pour avoir une bonne résolution, à la fois temporelle et fréquentielle.\n",
+    "Or, il est impossible d'avoir une très bonne localisation à la fois en temps et en fréquence,\n",
+    "c'est-à-dire une zone qui se réduit à un point.\n",
+    "Ce phénomène est le principe d'incertitude de Gabor-Heisenberg.\n",
+    "C'est d'ailleurs ce qui explique la propriété de changement d'échelle des transformations de Fourier :\n",
+    "la contraction dans un domaine implique une dilatation dans l'autre domaine.\n",
+    "Les fenêtres qui conduisent à la meilleur location temps-fréquence sont des gaussiennes :\n",
+    "on parle alors d'analyse de Gabor.\n",
+    "\n",
+    "La tranformée de Fourier à court terme a l'avantage d'être très simple.\n",
+    "En revanche, elle considère implicitement le signal stationnaire dans la fenêtre d'observation\n",
+    "(c'est-à-dire que durant la durée de la fenêtre, le signal n'est pas censé présenter de grands changements).\n",
+    "Elle s'applique donc aux signaux qui sont lentement stationnaires,\n",
+    "par exemple dans le domaine biomédical, en géophysique ou en traitement de la parole.\n",
+    "\n",
+    "Il existe d'autres représentations temps-fréquence, comme la transformée en ondelettes\n",
+    "(utilisée par exemple dans le format de compression JPEG 2000).\n",
+    "\n",
+    "```{figure} _static/figs/temps-frequence.png\n",
+    "---\n",
+    "width: 600px\n",
+    "name: F:temps-frequence:temps-frequence\n",
+    "---\n",
+    "Découpage du plan temps-fréquence pour quatre représentations d'un signal.\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "tags": [
      "remove-cell"
@@ -370,7 +434,7 @@
     "\n",
     "    ax4 = plt.subplot(2,3,6)\n",
     "    ax4.set_position([0.3, 0, 0.7, 0.7])\n",
-    "    Pxx, freqs, bins, im = plt.specgram(x, NFFT=250, Fs=fe, noverlap=125, cmap=\"jet\")\n",
+    "    Pxx, freqs, bins, im = plt.specgram(x, NFFT=250, Fs=fe, noverlap=125, cmap=\"jet\", scale=\"dB\")\n",
     "    plt.yticks([])\n",
     "    plt.xlabel(\"$t$ (s)\", fontsize=16)\n",
     "\n",
@@ -415,6 +479,13 @@
     "x = x/20000\n",
     "tfplot(x, fe, \"hello\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
