--- a/_sources/echantillonnage.ipynb
+++ b/_sources/echantillonnage.ipynb
@@ -5,9 +5,269 @@
    "metadata": {},
    "source": [
     "(C:echantillonnage)=\n",
-    "# Échantillonnage\n",
+    "# Échantillonnage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dans ce chapitre, nous allons dans un premier temps présenter le principe de l'échantillonnage d'un signal analogique,\n",
+    "puis le principe de la reconstruction de ce signal analogique à partir du signal échantillonné.\n",
+    "Ces deux opérations seront considérées dans un cas idéal.\n",
+    "Nous continuerons ensuite sur le choix des paramètres de l'échantillonnage,\n",
+    "à savoir la fréquence d'échantillonnage $f_e$ et la fréquence de coupure $f_c$.\n",
+    "Enfin, nous terminerons pas l'énoncé du théorème de l'échantillonnage."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Échantillonnage idéal\n",
     "\n",
-    "Échantillonnage"
+    "L'échantillonnage consiste à convertir un signal $x(t)$ analogique\n",
+    "en une séquence (suite de nombres) $x[n] = x(nT_e)$\n",
+    "où $T_e$ est la « période d'échantillonnage ».\n",
+    "\n",
+    "```{figure} _static/figs/echantillonnage-temporel-1.png\n",
+    "---\n",
+    "width: 400px\n",
+    "---\n",
+    "Signal analogique $x[n]$ et échantillonné $x[n]$.\n",
+    "```\n",
+    "\n",
+    "Pour étudier le phénomène de l'échantillonnage d'un point de vue mathématique,\n",
+    "il est plus simple de représenter le signal échantillonné par un train d'impulsions $x^*(t)$, défini par :\n",
+    "\n",
+    "$$\n",
+    "x^*(t) =\n",
+    "\\begin{cases}\n",
+    "x(t) &\\text{si}\\ t\\ \\text{est multiple de}\\ T_e \\\\\n",
+    "0    &\\text{sinon}\n",
+    "\\end{cases}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "```{figure} _static/figs/echantillonnage-temporel-2.png\n",
+    "---\n",
+    "width: 400px\n",
+    "---\n",
+    "Le signal échantillonné $x[n]$ est considéré comme un train d'impulsions $x^*(t)$.\n",
+    "```\n",
+    "\n",
+    "On peut montrer que la transformée de Fourier de $x^*(t)$ s'écrit :\n",
+    "\n",
+    "$$\n",
+    "X^*(f) = \\sum_k X(f-kf_e)\n",
+    "$$\n",
+    "\n",
+    "où $f_e=1/T_e$ est la « fréquence d'échantillonnage » (en anglais _sampling frequency_, souvent notée $F_s$).\n",
+    "Par conséquent, l'échantillonnage du signal temporel à la période $T_e$ produit une périodisation du spectre à la période $f_e=1/T_e$,\n",
+    "comme illustré sur les figures ci-dessous.\n",
+    "\n",
+    "```{figure} _static/figs/echantillonnage-frequentiel-1.png\n",
+    "---\n",
+    "width: 400px\n",
+    "---\n",
+    "Spectre de $x$.\n",
+    "```\n",
+    "\n",
+    "```{figure} _static/figs/echantillonnage-frequentiel-2.png\n",
+    "---\n",
+    "width: 400px\n",
+    "---\n",
+    "Spectre de $x^*$.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reconstruction idéale\n",
+    "\n",
+    "On peut retrouver le signal analogique $x(t)$ à partir du signal échantillonné $x^*(t)$,\n",
+    "en sélectionnant la période du spectre centrée autour de $0$,\n",
+    "c'est-à-dire la période située entre les fréquences entre $-f_c$ et $+f_c$.\n",
+    "Cette opération est effectuée en appliquant un filtre passe-bas de fréquence de coupure $f_c$ sur le signal $x^*$,\n",
+    "afin d'obtenir un nouveau signal $\\tilde{x}$ qu'on espère être égal à $x$.\n",
+    "\n",
+    "```{figure} _static/figs/echantillonnage-frequentiel-3.png\n",
+    "---\n",
+    "width: 400px\n",
+    "---\n",
+    "Spectre de $x^*$ et la zone du spectre à conserver (en vert).\n",
+    "```\n",
+    "\n",
+    "```{figure} _static/figs/echantillonnage-frequentiel-4.png\n",
+    "---\n",
+    "width: 400px\n",
+    "---\n",
+    "Résultat du filtre passe-bas de fréquence de coupure $f_c$.\n",
+    "```\n",
+    "\n",
+    "En fréquentiel, le filtre correspond à une multiplication du spectre $X^*(f)$ par une porte de largeur $2f_c$ :\n",
+    "\n",
+    "$$\n",
+    "\\tilde{X}(f) = X^*(f) \\ \\mathrm{rect}(f/2f_c)\n",
+    "$$\n",
+    "\n",
+    "Le signal temporel s'écrit donc, grâce à la transformée de Fourier inverse :\n",
+    "\n",
+    "$$\n",
+    "\\tilde{x}(t) = x^*(t) \\ * \\ 2 f_c \\mathrm{sinc}(2f_ct)\n",
+    "$$\n",
+    "\n",
+    "Chaque impulsion de $x^*$ est convoluée par un sinus cardinal.\n",
+    "En ajustant correctement la valeur de la fréquence de coupure avec la période d'échantillonnage,\n",
+    "cette opération revient à une interpolation de $x^*$,\n",
+    "et permet donc de reconstruire les valeurs du signal qui n'existent pas.\n",
+    "En d'autres termes : seuls quelques échantillons (les valeurs non nulles de $x^*$)\n",
+    "suffisent pour avoir toute l'information du signal analogique $x$ !\n",
+    "\n",
+    "<!-- interpsinc.m peut être présenté ici. Je peux présenter les versions Matlab, Python, animation depuis Python, GIF animé...\n",
+    "Je peux aussi faire une interface qui permettent de jouer sur les valeurs de fe et fc\n",
+    "=> ça permet de discuter du choix de ces paramètres et de leur influcene -->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Choix de la fréquence de coupure\n",
+    "\n",
+    "Lors de la reconstruction, la moindre des choses est que les valeurs non nulles de $x^*$ ne soient pas modifiées,\n",
+    "puisqu'elles sont égales à $x$ aux instants d'échantillonnage.\n",
+    "Il faut donc que les sinus cardinaux qui apparaissent dans la reconstruction s'annulent aux points d'échantillonnage,\n",
+    "ce qui se traduit par la condition :\n",
+    "\n",
+    "$$\n",
+    "\\frac{1}{2f_c} = T_e\n",
+    "\\qquad\\Leftrightarrow\\qquad\n",
+    "f_c = \\frac{1}{2T_e} = \\frac{f_e}{2}\n",
+    "$$\n",
+    "\n",
+    "Le meilleur choix pour la fréquence de coupure du filtre passe-bas est donc $f_c=f_e/2$,\n",
+    "cette valeur est appelée « fréquence de Nyquist ».\n",
+    "\n",
+    "```{figure} _static/figs/echantillonnage-frequentiel-5.png\n",
+    "---\n",
+    "width: 400px\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Choix de la fréquence d'échantillonnage\n",
+    "\n",
+    "Le spectre de $x^*(t)$ est une périodisation du spectre de $x(t)$ a une période $f_e$.\n",
+    "Si $f_e$ est trop faible, alors il peut y avoir une superposition des périodes,\n",
+    "et le filtrage ne permettra pas de les séparer convenablement.\n",
+    "\n",
+    "```{figure} _static/figs/echantillonnage-frequentiel-6.png\n",
+    "---\n",
+    "width: 400px\n",
+    "---\n",
+    "Aïe aïe aïe ! Avec une fréquence d'échantillonnage trop faible, la périodisation du spectre de $x$ produit des recouvrement de périodes.\n",
+    "```\n",
+    "\n",
+    "```{figure} _static/figs/echantillonnage-frequentiel-7.png\n",
+    "---\n",
+    "width: 400px\n",
+    "---\n",
+    "Signal reconstruit après filtrage, pour une fréquence d'échantillonnage trop faible :\n",
+    "on n'obtient pas le signal original $x$, il y a repliement spectral.\n",
+    "```\n",
+    "\n",
+    "La reconstruction correcte de $x(t)$ à partir de $x^*(t)$ implique donc une valeur minimale de $f_e$ :\n",
+    "\n",
+    "```{margin}\n",
+    "Si vous ne deviez retenir qu'une seule formule du cours de traitement de signal, ce serait cette équation.\n",
+    "Mais bien sûr, vous retiendrez beaucoup plus !\n",
+    "```\n",
+    "\n",
+    "$$\n",
+    "\\frac{f_e}{2} > f_\\mathrm{max}\n",
+    "\\qquad\\Leftrightarrow\\qquad\n",
+    "f_e > 2f_\\mathrm{max}\n",
+    "$$\n",
+    "\n",
+    "Ainsi, on prendra soin de vérifier que cette condition est vérifiée avant tout échantillonnage.\n",
+    "Si ce n'est pas possible (par exemple, la fréquence d'échantillonnage est limitée pour des raisons techniques),\n",
+    "alors il convient de supprimer les fréquences supérieures à la fréquence de Nyquist $f_e/2$ dans le signal.\n",
+    "Pour cela, on applique avant l'échantillonnage un filtre passe-bas de fréquence de coupure $f_e/2$.\n",
+    "Ce filtre est appelé « filtre anti-repliement ».\n",
+    "\n",
+    "\n",
+    "### Repliement spectral\n",
+    "\n",
+    "Lorsque la condition ci-avant n'est pas respectée, et donc que $f_e < 2f_\\mathrm{max}$, alors il y a recouvrement des périodes.\n",
+    "On parle de « repliement spectral » (en anglais : _aliasing_).\n",
+    "L'animation ci-dessous simule l'effet du repliement spectral sur une sinusoïde dont on peut régler la période d'échantillonnage.\n",
+    "\n",
+    "<div id='aliasing' class='spetsi'></div>\n",
+    "<script src=\"_static/js/spetsi.js\" type=\"text/javascript\"></script>\n",
+    "<script src=\"_static/js/aliasing.js\" type=\"text/javascript\"></script>\n",
+    "\n",
+    "Le repliement spectral peut apparaître sur tout signal numérique, s'il est mal échantillonné.\n",
+    "Les exemples ci-dessous illustrent l'effet du repliement spectral sur différents signaux.\n",
+    "\n",
+    "\n",
+    "````{tabbed} Signal\n",
+    "Un cosinus de fréquence 6 Hz (en gris) est échantillonné à 6,5 Hz.\n",
+    "Le signal obtenu avec l'échantillonnage est un cosinus de fréquence 0,5 Hz (points bleus).\n",
+    "\n",
+    "```{figure} _static/figs/aliasing-signal.png\n",
+    "---\n",
+    "width: 400px\n",
+    "```\n",
+    "````\n",
+    "\n",
+    "````{tabbed} Image\n",
+    "Une image est un signal en deux dimensions.\n",
+    "Le repliement spectral apparaît lorsque le motif présent dans l'image présente des structures très fines par rapport aux pixels.\n",
+    "```{figure} _static/figs/aliasing-photo.jpg\n",
+    "---\n",
+    "width: 400px\n",
+    "```\n",
+    "````\n",
+    "\n",
+    "````{tabbed} Vidéo\n",
+    "Une vidéo possède à la fois un échantillonnage spatial (au sein d'une même image)\n",
+    "mais aussi un échantillonnage temporel lié au nombres d'images acquises par seconde.\n",
+    "En général, la fréquence d'échantillonnage temporelle est de 25 Hz,\n",
+    "donc tout phénomène plus rapide que 12,5 Hz peut engendrer des effets étranges, comme sur la vidéo ci-dessous.\n",
+    "\n",
+    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/ByTsISFXUoY?start=10\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>\n",
+    "````\n",
+    "\n",
+    "<!-- Rajouter un panneau avec un exemple sonore de chirp sous échantillonné (cf audio_aliasing.m -->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Théorème de l'échantillonnage\n",
+    "\n",
+    "<!-- Vetterli p. 498 -->\n",
+    "Le théorème de l'échantillonnage a été formulé différemment et souvent indépendamment par plusieurs scientifiques :\n",
+    "Whittaker (1915), Nyquist (1928), Kotelnikov (1933), Raabe (1939) et Someya (1949),\n",
+    "mais c'est surtout à Shannon (1948) que ce théorème est attribué.\n",
+    "Il peut s'énoncer ainsi :\n",
+    "si un signal analogique $x(t)$ de fréquence maximale $f_\\mathrm{max}$ est échantillonné à une fréquence $f_e > 2f_\\mathrm{max}$,\n",
+    "alors $x(t)$ peut être exactement reconstruit à partir de ses échantillons à l'aide d'une interpolation par sinus cardinal :\n",
+    "\n",
+    "$$\n",
+    "x(t) = \\sum_{n=-\\infty}^{+\\infty} x\\left(\\frac{n}{f_e}\\right) \\mathrm{sinc} \\left(f_e\\left(t-\\frac{n}{f_e}\\right)\\right).\n",
+    "$$\n",
+    "\n",
+    "En pratique, la reconstruction n'est pas parfaite car il faut une somme infinie de termes dans la somme\n",
+    "et des instants d'échantillonnage très précis.\n",
+    "Aussi il est souvent préférable de choisir $f_e \\gg 2 f_\\mathrm{max}$."
    ]
   }
  ],
