--- a/_sources/td-numerisation.ipynb
+++ b/_sources/td-numerisation.ipynb
@@ -102,8 +102,8 @@
     "**Exercice 6**\n",
     "\n",
     "Le signal $x(t) = A \\sin(2 \\pi f t + \\varphi)$ avec $A=3$, $f=2$ Hz et $\\varphi=\\pi/5$\n",
-    "est quantifié sur 8 bits (avec un quantifieur uniforme par arrondi).\n",
-    "Quel est la valeur du pas de quantification ?"
+    "est quantifié sur 8 bits avec un quantifieur uniforme par arrondi.\n",
+    "Quel valeur du pas de quantification doit-on choisir pour obtenir la meilleure résolution sans saturation ?"
    ]
   },
   {
@@ -111,6 +111,38 @@
    "metadata": {},
    "source": [
     "**Exercice 7**\n",
+    "\n",
+    "Sur un CD audio, le signal sonore est quantifié sur 16 bits.\n",
+    "\n",
+    "* Déterminez le nombre de niveaux de quantification.\n",
+    "\n",
+    "* En supposant le signal sonore comme une sinusoïde d'amplitude $A$, quelle est la valeur maximale de l'erreur ?\n",
+    "\n",
+    "* Comparez la puissance de l'erreur à la puissance du signal.\n",
+    "\n",
+    "<!-- => 2^16 = 65536 niveaux \n",
+    "Supposons l'amplitude max (crête à crête) de 2A :\n",
+    "xmax-xmin=2A => q=2A/2^16 = 1 15 10^-6 = q A2\n",
+    "\n",
+    "Valeur max de lerreur : q/2 = 7,6 10^{-6} A2\n",
+    "Puissance de 'erreur : q^2/12 = 1,5 10^{-11} A^2 4\n",
+    "Puissance du'ne sinusoïde 'amplitude 2A :\n",
+    "\n",
+    "$$\n",
+    "Px = \\frac{A}{T}\\int_T [A\\sin(2\\pi f t)\\ dt\n",
+    "=\\frac{} 1^2 \\int \\frac{1-\\cos(4\\pi ft)}{2} dt\n",
+    "= A^2/2T \\int 1 dt - A^2/2T \\int_T \\©os(4\\pi f t) dt\n",
+    "= A^2/2 - 0 = A^2/2\n",
+    "$$\n",
+    "\n",
+    "différence importante ! -->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercice 8**\n",
     "\n",
     "Un signal analogique de bande passante 20 kHz est numérisé sur 16 bits.\n",
     "Combien de bits par seconde au minimum doit traiter le convertisseur analogique-numérique ?\n",
@@ -129,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercice 8**\n",
+    "**Exercice 9**\n",
     "\n",
     "<!-- Source : cours de C. Doignon -->\n",
     "\n",
@@ -179,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
