--- a/_sources/num/correc31.ipynb
+++ b/_sources/num/correc31.ipynb
@@ -11,6 +11,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": [
      "remove-cell"
     ]
@@ -27,6 +30,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": [
      "remove-input"
     ]
@@ -105,6 +111,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": [
      "remove-input"
     ]
@@ -155,6 +164,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": [
      "remove-input"
     ]
@@ -205,6 +217,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": [
      "remove-input"
     ]
