--- a/_sources/num/correc33.ipynb
+++ b/_sources/num/correc33.ipynb
@@ -11,6 +11,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": [
      "remove-cell"
     ]
@@ -42,6 +45,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": [
      "remove-cell"
     ]
@@ -103,6 +109,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": [
      "remove-input"
     ]
@@ -123,7 +132,7 @@
    ],
    "source": [
     "# Signal temporel à 8820 Hz\n",
-    "data = np.loadtxt(\"../_static/8820Hz.csv\", delimiter=',', skiprows=0)\n",
+    "data = np.loadtxt(\"../_static/8820Hz.csv\", delimiter=',')\n",
     "t1 = data[:,0]\n",
     "x1 = data[:,1]\n",
     "Te1 = t1[1] - t1[0]\n",
@@ -153,6 +162,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": [
      "remove-input"
     ]
@@ -205,6 +217,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": [
      "remove-input"
     ]
