--- a/_sources/vect/correc14.ipynb
+++ b/_sources/vect/correc14.ipynb
@@ -595,6 +595,72 @@
    "source": [
     "display(Audio(mu2, rate=fe))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test : compression de 25%, on garde 1 échantillon sur 4 en temporel et 25% des basses fréquences en Haar\n",
+    "\n",
+    "# Chargement de la musique\n",
+    "fe, mus = wavfile.read(\"../_static/Elise.wav\")\n",
+    "\n",
+    "# Ne conserve que le début\n",
+    "M = 2**17\n",
+    "mus = mus[0:M]              # Musique originale\n",
+    "mu1 = np.zeros(mus.shape)   # Musique compressée dans la base canonique\n",
+    "mu2 = np.zeros(mus.shape)   # Musique compressée dans la base de Haar\n",
+    "\n",
+    "# Paramètres\n",
+    "N = 16         # Nombre de points par morceau\n",
+    "L = 8          # Nombre de points conservés\n",
+    "K = int(M/N)   # Nombre de morceaux\n",
+    "\n",
+    "# Vecteurs de la base et des coefficients\n",
+    "b = haar(N)\n",
+    "c = np.zeros(N)\n",
+    "\n",
+    "for k in range(K):\n",
+    "\n",
+    "    # Morceau du signal de N échantillons\n",
+    "    idx = range( (k*N-N), k*N)\n",
+    "    x = mus[idx]\n",
+    "\n",
+    "    # Compression dans la base canonique\n",
+    "    x1 = x.copy()\n",
+    "    \n",
+    "    test = 1\n",
+    "    \n",
+    "    if test==0:\n",
+    "        x1[L:] = 0\n",
+    "    \n",
+    "    if test==1:\n",
+    "        x1[1::4] = 0\n",
+    "        x1[2::4] = 0\n",
+    "        x1[3::4] = 0\n",
+    "        \n",
+    "    if test==2:\n",
+    "        i = np.argsort(x1)\n",
+    "        x1[i[:L]] = 0\n",
+    "    \n",
+    "    \n",
+    "    mu1[idx] = x1\n",
+    "\n",
+    "    # Compression dans la base de Haar\n",
+    "    for i in range(N):\n",
+    "        c[i] = np.dot(x, b[i])  \n",
+    "    c[4:] = 0\n",
+    "    x2 = np.zeros(N)\n",
+    "    for i in range(N):\n",
+    "        x2 += c[i] * b[i]\n",
+    "    mu2[idx] = x2\n",
+    "    \n",
+    "display(Audio(mus, rate=fe))\n",
+    "display(Audio(mu1, rate=fe))\n",
+    "display(Audio(mu2, rate=fe))"
+   ]
   }
  ],
  "metadata": {
@@ -613,7 +679,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
