--- a/_sources/notions/signaux-elementaires.ipynb
+++ b/_sources/notions/signaux-elementaires.ipynb
@@ -67,13 +67,17 @@
     "Pour le représenter, il faut être dans un espace à trois dimensions (la variable, la partie réelle et la partie imaginaire).\n",
     "De cette manière, l'exponentielle complexe ressemble à une queue de cochon, ou un tire-bouchon.\n",
     "Remarquez que la variable $f$, souvent appelée fréquence, peut tout à fait être négative : dans ce cas, l'exponentielle complexe tourne dans le sens inverse.\n",
-    "On peut le constater sur cette [animation](https://vincmazet.github.io/spetsi/expo.html).\n",
     "\n",
     "```{figure} expo.svg\n",
     "---\n",
     "name: F:expo\n",
     "---\n",
-    "```"
+    "```\n",
+    "\n",
+    "<div id=\"expo\" class=\"spetsi mathjax_process\"></div>\n",
+    "<script src=\"https://vincmazet.github.io/spetsi/js/spetsi.js\" type=\"text/javascript\"></script>\n",
+    "<script src=\"https://vincmazet.github.io/spetsi/js/three.js\"></script>\n",
+    "<script src=\"https://vincmazet.github.io/spetsi/js/expo.js\" type=\"text/javascript\"></script>"
    ]
   },
   {
