--- a/_sources/notions/tp.ipynb
+++ b/_sources/notions/tp.ipynb
@@ -101,9 +101,10 @@
     "  Comme le signal est à temps discret, vous pouvez utiliser la fonction `matplotlib.pyplot.stem`\n",
     "  pour afficher les points individuellement sans les relier.\n",
     "  \n",
-    "* Le fichier <a href=\"../_static/pluie.wav\">pluie.wav</a> contient un signal sonore sous forme d'une matrice\n",
-    "  dont la première colonne correspond aux échantillons temporels et les deux colonnes suivantes aux canaux gauche et droite.\n",
-    "  Chargez le signal sonore (`scipy.io.wavfile.read`) et affichez uniquement le signal issu du canal gauche.  "
+    "* Le fichier <a href=\"../_static/world-co2.csv\">world-co2.csv</a> contient les mesures de la quantité de CO<sub>2</sub> dans l'atmosphère\n",
+    "  (en ppm : partie par million) sur toute la Terre.\n",
+    "  Chargez ces données avec `numpy.loadtxt`, en définissant correctement les arguments.\n",
+    "  Affichez l'évolution du CO<sub>2</sub> atmosphérique en fonction des années."
    ]
   },
   {
