--- a/_sources/vectoriel/representation-vectorielle.ipynb
+++ b/_sources/vectoriel/representation-vectorielle.ipynb
@@ -152,7 +152,7 @@
     "Parfois, il est intéressant de représenter les signaux dans une autre base que la base canonique : on parle alors de _décomposition_ ou de _projection_ d'un signal $x$ sur une base.\n",
     "La [transformée de Fourier](C:fourier) peut être vue comme la décomposition de signaux dans une autre base.\n",
     "De même, les techniques de compression (audio, image ou vidéo) utilisent astucieusement une décomposition dans une base particulière pour réduire le poids des données.\n",
-    "Les coefficients du signal dans cette nouvelle base vont donc être différent des coefficients de la base canonique.\n",
+    "Les coefficients du signal dans cette nouvelle base vont donc être différents des coefficients de la base canonique.\n",
     "\n",
     "La décomposition d'un signal $x$ de taille $N$ dans une base orthonormée $\\{\\varphi_k\\}$, et donc le calcul des nouveaux coefficients $\\alpha_k$, s'obtient en calculant le produit scalaire de $x$ avec chaque élément $\\varphi_k$ de la base :\n",
     "\n",
