Ajout d'une question sur l'affichage (shape)

--- a/_sources/elementaire/tp.ipynb
+++ b/_sources/elementaire/tp.ipynb
@@ -49,7 +49,6 @@
     "# Création d'une figure, dont on définit la taille\n",
     "plt.figure(figsize=(8,4))\n",
     "\n",
-    "\n",
     "# Affichage de la sinusoïde (dans la figure créée)\n",
     "plt.plot(n, x, \".-\", label=\"sinusoïde\")\n",
     "\n",
@@ -70,6 +69,8 @@
    "metadata": {},
    "source": [
     "* (Re)copier le code ci-avant dans votre notebook pour vérifier que le signal s'affiche de la même manière.\n",
+    "\n",
+    "* Donnez les dimensions du signal : `x.shape`.\n",
     "\n",
     "* Modifier le code pour représenter le signal sinusoïdal\n",
     "  \n",
@@ -114,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a class=\"btn btn-light\" href=\"../conv/tp.html\" role=\"button\">Suite du TP</a>"
+    "Continuez le TP avec l'[exercice sur la convolution](C:convolution:tp)."
    ]
   }
  ],
