précision dans le texte

--- a/_sources/vectoriel/representation-vectorielle.ipynb
+++ b/_sources/vectoriel/representation-vectorielle.ipynb
@@ -186,7 +186,7 @@
     "* les techniques de compression sans perte permettent de gagner de la place mémoire sans modifier le signal, mais le gain en place mémoire est modéré ;\n",
     "* les techniques de compression avec perte permettent de gagner beaucoup de place mémoire, mais le signal sera nécessairement modifié. Tout l'enjeu consiste à trouver une technique qui permette de réduire le plus possible l'encombrement mémoire tout en garantissant une perte d'information du signal qui soit maîtrisée.\n",
     "\n",
-    "Dans cet exemple, nous allons montrer effectuer la compression d'un signal audio\n",
+    "Dans cet exemple, nous allons montrer effectuer la compression avec perte d'un signal audio\n",
     "en utilisant sa décomposition dans une base appropriée : la base de Haar.\n",
     "Pour cela, nous considérons des signaux de taille $N=16$."
    ]
