--- a/elementaire/signaux-elementaires.ipynb
+++ b/elementaire/signaux-elementaires.ipynb
@@ -381,7 +381,7 @@
     "---\n",
     "```\n",
     "\n",
-    "<a class=\"exercise btn btn-light\" href=\"td#exercice-2\" role=\"button\">2</a>"
+    "<a class=\"exercise btn btn-light\" href=\"/elementaire/td#exercice-2\" role=\"button\">2</a>"
    ]
   }
  ],
