--- a/convolution/intro.ipynb
+++ b/convolution/intro.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "```{figure} convolution.svg\n",
     "---\n",
-    "width: 400px\n",
+    "width: 500px\n",
     "name: F:convolution:intro\n",
     "---\n",
     "Illustration du produit de convolution.\n",
@@ -282,10 +282,10 @@
     "\n",
     "::::\n",
     "\n",
-    "<a class=\"exercise btn btn-light\" href=\"td.html#exercice-1\" role=\"button\">1</a>\n",
-    "<a class=\"exercise btn btn-light\" href=\"td.html#exercice-2\" role=\"button\">2</a>\n",
-    "<a class=\"exercise btn btn-light\" href=\"td.html#exercice-3\" role=\"button\">3</a>\n",
-    "<a class=\"exercise btn btn-light\" href=\"td.html#exercice-4\" role=\"button\">4</a>"
+    "<a class=\"exercise btn btn-light\" href=\"/convolution/td#exercice-1\" role=\"button\">1</a>\n",
+    "<a class=\"exercise btn btn-light\" href=\"/convolution/td#exercice-2\" role=\"button\">2</a>\n",
+    "<a class=\"exercise btn btn-light\" href=\"/convolution/td#exercice-3\" role=\"button\">3</a>\n",
+    "<a class=\"exercise btn btn-light\" href=\"/convolution/td#exercice-4\" role=\"button\">4</a>"
    ]
   }
  ],
