Liens vers les exercices

--- a/annexes/python.ipynb
+++ b/annexes/python.ipynb
@@ -55,8 +55,8 @@
     "Un [notebook](https://jupyterlab.readthedocs.io/en/latest/user/notebook.html) est un fichier contenant du code,\n",
     "mais également les résultats produits par ce code (comme des valeurs numériques ou des images) et du texte qui accompagnera le code.\n",
     "Un notebook est divisé en _cellules_ qui peuvent être de deux types : « code » ou « markdown ».\n",
-    "En appuyant sur `Ctrl` + `Entrée` dans une cellule, le code de celle-ci (et uniquement de celle-ci) est exécuté.\n",
-    "Si à la place vous appuyez sur `Shift` + `Entrée`, alors le code de la cellule courante est exécuté et le curseur passe sur la cellule suivante.\n",
+    "En appuyant sur {kbd}`Ctrl` + {kbd}`Entrée` dans une cellule, le code de celle-ci (et uniquement de celle-ci) est exécuté.\n",
+    "Si à la place vous appuyez sur {kbd}`Shift` + {kbd}`Entrée`, alors le code de la cellule courante est exécuté et le curseur passe sur la cellule suivante.\n",
     "\n",
     "\n",
     "### Cellules de code\n",
