--- a/elementaire/signaux-elementaires.ipynb
+++ b/elementaire/signaux-elementaires.ipynb
@@ -379,9 +379,14 @@
     "width: 700px\n",
     "name: F:peigne\n",
     "---\n",
-    "```\n",
-    "\n",
-    "<a class=\"exercise btn btn-light\" href=\"/elementaire/td#exercice-2\" role=\"button\">2</a>"
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "✏️ [](S:elementaire:exo:representation)"
    ]
   }
  ],
