--- a/convolution/intro.ipynb
+++ b/convolution/intro.ipynb
@@ -280,12 +280,17 @@
     "\n",
     ":::\n",
     "\n",
-    "::::\n",
-    "\n",
-    "<a class=\"exercise btn btn-light\" href=\"/convolution/td#exercice-1\" role=\"button\">1</a>\n",
-    "<a class=\"exercise btn btn-light\" href=\"/convolution/td#exercice-2\" role=\"button\">2</a>\n",
-    "<a class=\"exercise btn btn-light\" href=\"/convolution/td#exercice-3\" role=\"button\">3</a>\n",
-    "<a class=\"exercise btn btn-light\" href=\"/convolution/td#exercice-4\" role=\"button\">4</a>"
+    "::::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "✏️ [](S:convolution:exo:representation)\\\n",
+    "✏️ [](S:convolution:exo:calcul)\\\n",
+    "✏️ [](S:convolution:exo:xx)\\\n",
+    "✏️ [](S:convolution:exo:echo)"
    ]
   }
  ],
