Intégration des animations

--- a/convolution/intro.ipynb
+++ b/convolution/intro.ipynb
@@ -50,16 +50,26 @@
     "correspond à $y(t)$ <span style=\"color:#00A90B\">●</span>.\n",
     "En faisant glisser $t$, on obtient le signal $y(t)$ <span style=\"color:#00A90B\">●</span> en entier.\n",
     "\n",
+    "\n",
+    "<!--\n",
     "<div id=\"conv1c\" class=\"spetsi mathjax_process\"></div>\n",
     "<script src=\"https://vincmazet.github.io/spetsi/js/spetsi.js\" type=\"text/javascript\"></script>\n",
     "<script src=\"https://vincmazet.github.io/spetsi/js/conv1c.js\" type=\"text/javascript\"></script>\n",
+    "-->\n",
+    "\n",
+    "[🎬 Produit de convolution en temps continu](https://vincmazet.github.io/spetsi/conv1c.html)\n",
     "\n",
     "Dans cette deuxième animation (ci-dessous), vous pouvez dessiner les signaux à temps discret $x$ et $h$ pour visualiser le résultat sur $y$.\n",
     "\n",
+    "<!--\n",
     "<div id=\"convolution\" class=\"spetsi mathjax_process\"></div>\n",
     "<script src=\"https://vincmazet.github.io/spetsi/js/spetsi.js\" type=\"text/javascript\"></script>\n",
     "<script src=\"https://vincmazet.github.io/spetsi/js/convolution.js\" type=\"text/javascript\"></script>\n",
-    "<script type=\"text/javascript\">window.onload = function (){ init_conv1c(); init_convolution(); };</script>"
+    "<script type=\"text/javascript\">window.onload = function (){ init_conv1c(); init_convolution(); };</script>\n",
+    "-->\n",
+    "\n",
+    "\n",
+    "[🎬 Produit de convolution en temps discret](https://vincmazet.github.io/spetsi/convolution.html)"
    ]
   },
   {
