--- a/elementaire/signaux-elementaires.ipynb
+++ b/elementaire/signaux-elementaires.ipynb
@@ -74,7 +74,7 @@
     "---\n",
     "```\n",
     "\n",
-    "[**Animation** : exponentielle complexe](https://vincmazet.github.io/spetsi/expo.html)\n",
+    "[🎬 Exponentielle complexe](https://vincmazet.github.io/spetsi/expo.html)\n",
     "\n",
     "<div id=\"expo\" class=\"spetsi mathjax_process\"></div>\n",
     "<script src=\"https://vincmazet.github.io/spetsi/js/spetsi.js\" type=\"text/javascript\"></script>\n",
