Intégration des animations

--- a/convolution/intro.ipynb
+++ b/convolution/intro.ipynb
@@ -57,7 +57,9 @@
     "<script src=\"https://vincmazet.github.io/spetsi/js/conv1c.js\" type=\"text/javascript\"></script>\n",
     "-->\n",
     "\n",
-    "[🎬 Produit de convolution en temps continu](https://vincmazet.github.io/spetsi/conv1c.html)\n",
+    "<!-- [🎬 Produit de convolution en temps continu](https://vincmazet.github.io/spetsi/conv1c.html) -->\n",
+    "\n",
+    "<iframe src=\"https://vincmazet.github.io/spetsi/standalone/conv1c.html\"><a href=\"https://vincmazet.github.io/spetsi/standalone/conv1c.html\">Animation</a></iframe>\n",
     "\n",
     "Dans cette deuxième animation (ci-dessous), vous pouvez dessiner les signaux à temps discret $x$ et $h$ pour visualiser le résultat sur $y$.\n",
     "\n",
@@ -69,7 +71,9 @@
     "-->\n",
     "\n",
     "\n",
-    "[🎬 Produit de convolution en temps discret](https://vincmazet.github.io/spetsi/convolution.html)"
+    "<!-- [🎬 Produit de convolution en temps discret](https://vincmazet.github.io/spetsi/convolution.html) -->\n",
+    "\n",
+    "<iframe src=\"https://vincmazet.github.io/spetsi/standalone/convolution.html\"><a href=\"https://vincmazet.github.io/spetsi/standalone/convolution.html\">Animation</a></iframe>"
    ]
   },
   {
