--- a/elementaire/signaux-elementaires.ipynb
+++ b/elementaire/signaux-elementaires.ipynb
@@ -74,12 +74,14 @@
     "---\n",
     "```\n",
     "\n",
-    "[🎬 Exponentielle complexe](https://vincmazet.github.io/spetsi/expo.html)\n",
+    "<!-- [🎬 Exponentielle complexe](https://vincmazet.github.io/spetsi/expo.html)\n",
     "\n",
     "<div id=\"expo\" class=\"spetsi mathjax_process\"></div>\n",
     "<script src=\"https://vincmazet.github.io/spetsi/js/spetsi.js\" type=\"text/javascript\"></script>\n",
     "<script src=\"https://vincmazet.github.io/spetsi/js/three.js\"></script>\n",
-    "<script src=\"https://vincmazet.github.io/spetsi/js/expo.js\" type=\"text/javascript\"></script>"
+    "<script src=\"https://vincmazet.github.io/spetsi/js/expo.js\" type=\"text/javascript\"></script> -->\n",
+    "\n",
+    "<iframe src=\"https://vincmazet.github.io/spetsi/standalone/expo.html\"><a href=\"https://vincmazet.github.io/spetsi/standalone/expo.html\">Animation</a></iframe>"
    ]
   },
   {
