--- a/elementaire/tpc.ipynb
+++ b/elementaire/tpc.ipynb
@@ -11,6 +11,9 @@
    "cell_type": "markdown",
    "metadata": {
     "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
     "slideshow": {
      "slide_type": ""
     },
@@ -381,7 +384,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
